# Flowatch

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  build.sh  dialog_concepts_demo.sh  dialog_testing_suite.sh  generate_json.sh  network_dialog_concepts.sh  pcap_test.cpp  quick_fix_test.sh  test_integration.sh  testing_guide.sh
algorithm_results/: algorithm_validation_report.md  attack_similarity.txt  clustering_test.txt  dissimilar_test.txt  empty_test.txt  http_parsing_test.txt  identical_test.txt  malformed_test.txt  minimize_attack_test.txt  minimize_complex_test.txt  minimize_simple_test.txt  moderate_test.txt  no_messages_test.txt  self_compare.txt  similar_test.txt  url_params_test.txt
behavior_test/: troubleshoot_behavior.sh
behavior_test/scripts/: anomaly_geographic.sh  anomaly_high_frequency.sh  anomaly_protocol_violations.sh  anomaly_suspicious_domains.sh  anomaly_unusual_ports.sh  monitor_learning.sh  normal_browser.sh  normal_email.sh  normal_updates.sh  run_behavior_test.sh
config/: enhanced_firewall.json  firewall.json
demo_results/: anomaly_detection.txt  attack_clustering.txt  attack_vs_benign.txt  command_minimization.txt  command_progression.txt  dialog_concepts_demo_report.md  evolution_timeline.txt  minimal_sqli.json  sqli_minimization.txt  sqli_variant_analysis.txt  xss_evolution.txt  xss_minimization.txt
dialog_demo/attacks/: sqli_original.json  sqli_variant1.json  xss_advanced.json
dialog_demo/clustering/: command_injection.json  sqli_variant2.json  xss_basic.json
dialog_demo/scenarios/: normal_api.json  normal_shopping.json
dialog_demo/variants/: single_command.json
dialog_test_data/attack_patterns/: malware_download.json  sql_injection.json  xss_attack.json
dialog_test_data/dialogs/: auth1.json  auth2.json  complex_multi.json  get1.json  get2.json  perf_test_1.json  perf_test_10.json  perf_test_11.json  perf_test_12.json  perf_test_13.json  perf_test_14.json  perf_test_15.json  perf_test_16.json  perf_test_17.json  perf_test_18.json  perf_test_19.json  perf_test_2.json  perf_test_20.json  perf_test_3.json  perf_test_4.json  perf_test_5.json  perf_test_6.json  perf_test_7.json  perf_test_8.json  perf_test_9.json  simple_get.json
dialog_test_results/: clustering.txt  diff_attacks.txt  diff_different.txt  diff_identical.txt  diff_similar.txt  minimize_attack.txt  minimize_complex.txt  minimize_simple.txt  test_report.md
include/cli/: interface.hpp
include/dialog/: dialog_applications.hpp  dialog_diffing.hpp  dialog_integration.hpp  dialog_minimizer.hpp  dialog_tree.hpp
include/geo/: location_manager.hpp
include/monitor/: behavior_monitor.hpp  connection_monitor.hpp  enhanced_connection_monitor.hpp  process_monitor.hpp
include/rules/: rule_manager.hpp
include/utils/: config.hpp  logger.hpp  types.hpp
src/: main.cpp
src/cli/: enhanced_interface.cpp  interface.cpp
src/dialog/: dialog_applications.cpp  dialog_diffing.cpp  dialog_integration.cpp  dialog_minimizer.cpp  dialog_tree.cpp
src/geo/: location_manager.cpp
src/monitor/: behavior_monitor.cpp  connection_monitor.cpp  enhanced_connection_monitor.cpp  process_monitor.cpp
src/rules/: rule_manager.cpp  rule_manager_enhanced.cpp
src/utils/: config.cpp  logger.cpp
